# Project_C

./: .codacy.yml  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
cmake/: FindCcLint.cmake  FindClangFormat.cmake  FindCoverage.cmake  FindCppCheck.cmake  FindFlawFinder.cmake  FindHtmlCoverage.cmake  FindSphinx.cmake  FindValgrind.cmake
docs/: ABR.rst  CMakeLists.txt  Liste.rst  Phonetisation.rst  Sylphon.rst  api.rst  conf.py  requirements.txt  rime.rst  syllabation.rst
src/: CMakeLists.txt  Doxyfile  tree.h
src/ABR/: ABR-doc.h  ABR.c  AbrConfig.cmake.in  CMakeLists.txt  abr.pc.in
src/GTK/: CMakeLists.txt  GtkConfig.cmake.in  fenetre.glade  gtk.c  gtk.pc.in
src/Liste/: CMakeLists.txt  ListeConfig.cmake.in  ListePrio.pc.in  listePrio.c  listePrio.h
src/Phonetisation/: CMakeLists.txt  PhonetisationConfig.cmake.in  phonetisation.c  phonetisation.h  phonetisation.pc.in
src/Rime/: CMakeLists.txt  Rime.h  RimeConfig.cmake.in  rime-doc.c  rime.inc  rime.pc.in
src/Sylphon/: CMakeLists.txt  Sylphon.c  Sylphon.h  SylphonConfig.cmake.in  sylphon.pc.in
src/syllabation/: CMakeLists.txt  SyllabationConfig.cmake.in  syllabation.c  syllabation.h  syllabation.pc.in
test/: CMakeLists.txt  CmakeListe.txt
test/ABR/: CMakeLists.txt  test-ABR.c
test/Liste/: test-listPrio.c
test/Syllabation/: test-cut.c  test-syllabation.c
test/phonetisation/: test-phonetisation.c
